[package]
name = "lightkeeper"
version = "0.28.4"
edition = "2021"

[[bin]]
name = "lightkeeper"
path = "src/main.rs"

[dependencies]
oping = "0.4.0"
dbus = "0.9.7"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
env_logger = "0.11.7"
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.33"
serde_json = "1.0.140"
chrono = { version = "0.4.40", features = ["serde", "unstable-locales"]}
qmetaobject = "0.2.10"
cstr = "0.2.12"
sha2 = "0.10.8"
strum = "0.26.3"
strum_macros = "0.26.4"
ureq = "2.10.1"
rayon = "1.10.0"
rand = "0.8.5"
regex = "1.10.6"
rustls = "0.22.4"
rustls-native-certs = "0.7.2"
rustls-pemfile = "2.1.3"
x509-parser = "0.16.0"
base64 = "0.22.1"
hex = "0.4.3"
bincode = "1.3.3"
openssl = { version = "0.10.71", features = ["vendored"] }
# Only for hot reload.
notify = { version = "7.0.0" }

lightkeeper_module = { path = "macros/lightkeeper_module" }

# [dev-dependencies]
# notify = { version = "7.0.0" }

