[package]
name = "lightkeeper"
version = "0.34.2"
edition = "2021"

[[bin]]
name = "lightkeeper"
path = "src/main.rs"

[dependencies]
oping = "0.4.0"
dbus = "0.9.7"
clap = { version = "4.5.42", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.33"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde", "unstable-locales"]}
qmetaobject = "0.2.10"
cstr = "0.2.12"
sha2 = "0.10.9"
strum = "0.27.2"
strum_macros = "0.27.2"
ureq = "2.12.1"
rayon = "1.10.0"
rand = "0.9.2"
regex = "1.11.1"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
x509-parser = "0.17.0"
base64 = "0.22.1"
hex = "0.4.3"
bincode = "1.3.3"
openssl = { version = "0.10.73", features = ["vendored"] }
# Only for hot reload.
notify = { version = "7.0.0" }
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }

lightkeeper_module = { path = "macros/lightkeeper_module" }

# [dev-dependencies]
# notify = { version = "7.0.0" }

