[package]
name = "lightkeeper"
version = "0.37.0"
edition = "2021"

[[bin]]
name = "lightkeeper"
path = "src/main.rs"

[dependencies]
lightkeeper_module = { path = "macros/lightkeeper_module" }

oping = { version = "0.4.0", optional = true }
dbus = "0.9.7"
clap = { version = "4.5.42", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.33"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde", "unstable-locales"]}
qmetaobject = "0.2.10"
cstr = "0.2.12"
sha2 = "0.10.9"
strum = "0.27.2"
strum_macros = "0.27.2"
ureq = "3.3.0"
rayon = "1.10.0"
rand = "0.9.2"
regex = "1.11.1"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
x509-parser = "0.18.1"
base64 = "0.22.1"
hex = "0.4.3"
bincode = "1.3.3"
openssl = { version = "0.10.73", features = ["vendored"] }
# Only for hot reload.
notify = { version = "7.0.0" }
ssh2 = { version = "0.9.5", features = ["vendored-openssl"] }

# Only for setting non-blocking for local-command
libc = "0.2"

# Used for multi-platform non-flatpak secrets management.
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"], optional = true }
# Used for Flatpak secrets management through portal service.
oo7 = { version = "0.6", optional = true }
tokio = { version = "1", optional = true, features = ["rt"] }

[features]
default = ["native", "oping"]
native = ["dep:keyring"]
flatpak = ["dep:oo7", "dep:tokio"]

# [dev-dependencies]
# notify = { version = "7.0.0" }

